--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <li>
               <a href="./pages/products-main.html" target="_self">PRODUCTS</a>
             </li>
+            <!-- <li>
+              <a href="./pages/about.html" target="_self">ABOUT</a>
+            </li> -->
             <li>
-              <a href="#" target="_self">ABOUT</a>
+              <a href="./pages/contact.html" target="_self">CONTACT</a>
             </li>
-            <li>
-              <a href="#" target="_self">CONTACT</a>
-            </li>
-            <li>
+            <!-- <li>
               <a href="#" target="_self">STORE</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -41,30 +41,26 @@
       <!-- START OF FEATURE CONTENT -->
       <div class="featured-content">
         <div class="featured-content-main">
-          <a href="./pages/article-celsius.html" target="_self">
+          <a href="./pages/products-main.html" target="_self">
             <div class="feat-cont-card">
-              <h2 class="feat-heading">Tempory Housing</h2>
-              <img src="./images/products/flood_housing1.jpg" alt="Room" />
+              <h2 class="feat-heading">FLOODING CAN STRIKE AT ANY MOMENT</h2>
+              <img src="./images/car_road.JPG" alt="Room" />
             </div>
           </a>
 
           <div class="featured-content-aside">
-            <a href="./pages/article-self.html" target="_self">
+            <a href="./pages/product_beta.html" target="_self">
               <div class="feat-cont-card">
-                <h2 class="feat-heading">Copmlete Relief Site</h2>
-                <img
-                  src="./images/products/flood_housing2.jpg"
-                  alt="Facility"
-                />
+                <h2 class="feat-heading">LAERGER BALLAST TUBE</h2>
+                <img src="./images/barrier4.JPG" alt="Facility" />
               </div>
             </a>
-            <a href="./pages/article-metaverse.html" target="_self">
+            <a href="./pages/product_beta.html" target="_self">
               <div class="feat-cont-card">
-                <h2 class="feat-heading">Full Facilities</h2>
-                <img
-                  src="./images/products/flood_housing3.jpg"
-                  alt="GraphCoin"
-                />
+                <h2 class="feat-heading">
+                  DESIGNED FOR RIVERS & FAST WATER WAYS
+                </h2>
+                <img src="./images/barrier.JPG" alt="GraphCoin" />
               </div>
             </a>
           </div>
@@ -73,6 +69,12 @@
 
       <!-- START OF SUB CONTENT -->
       <div class="sub-content">
+        <!-- <h2>
+          Flooding can strike at any moment. It is the most frequently occurring
+          natural disaster around the world and is increasing in frequency year
+          on year.
+        </h2> -->
+        <!--  
         <a href="./pages/product-flood_barriers.html" target="_self">
           <article class="card">
             <div class="card-image">
@@ -126,6 +128,7 @@
             </div>
           </article>
         </a>
+        -->
       </div>
 
       <div class="footer">
