--- a/pages/products-main.html
+++ b/pages/products-main.html
@@ -21,15 +21,15 @@
             <li>
               <a href="./products-main.html" target="_self">PRODUCTS</a>
             </li>
+            <!-- <li>
+              <a href="./pages/about.html" target="_self">ABOUT</a>
+            </li> -->
             <li>
-              <a href="#" target="_self">ABOUT</a>
+              <a href="./contact.html" target="_self">CONTACT</a>
             </li>
-            <li>
-              <a href="#" target="_self">CONTACT</a>
-            </li>
-            <li>
+            <!-- <li>
               <a href="#" target="_self">STORE</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
@@ -42,132 +42,48 @@
       <!-- START OF SUB CONTENT -->
       <div class="sub-content">
         <!-- START OF ARTICLE CARDS  -->
-        <a href="./product-flood_barriers.html" target="_self">
+        <a href="./product_beta.html" target="_self">
           <article class="card">
             <div class="card-image">
-              <img
-                src="../images/products/flood_barriers.jpg"
-                alt="Flood Barriers"
-              />
+              <img src="../images/barrier.JPG" alt="Flood Barriers" />
             </div>
             <div class="card-content">
-              <h3>Flood Barries</h3>
+              <h3>FLOOD PRO 160</h3>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                recusandae placeat, corporis ab nobis quos omnis deserunt
-                ducimus accusamus cumque repellendus! Sed velit animi rerum
-                atque facilis unde explicabo adipisci.
+                Standard construction designed for medium rivers and fast water
+                ways. Total height is 160cm when inflated.
               </p>
             </div>
           </article>
         </a>
 
-        <a href="./product-flood_barriers.html" target="_self">
+        <a href="./product_beta.html" target="_self">
           <article class="card">
             <div class="card-image">
-              <img src="../images/products/flood_doors.jpg" alt="Flood Doors" />
+              <img src="../images/barrier2.JPG" alt="Flood Barriers" />
             </div>
             <div class="card-content">
-              <h3>Flood Doors</h3>
+              <h3>FLOOD PRO 160S</h3>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                recusandae placeat, corporis ab nobis quos omnis deserunt
-                ducimus accusamus cumque repellendus! Sed velit animi rerum
-                atque facilis unde explicabo adipisci.
+                Larger ballast tube construction designed for larger rivers and
+                fast water ways. Total height is 160cm when inflated.
               </p>
             </div>
           </article>
         </a>
 
-        <a href="./product-flood_barriers.html" target="_self">
+        <a href="./product_beta.html" target="_self">
           <article class="card">
             <div class="card-image">
-              <img src="../images/products/flood_gates.jpg" alt="Flood Gates" />
+              <img src="../images/barrier4.JPG" alt="Flood Barriers" />
             </div>
             <div class="card-content">
-              <h3>Flood Gates</h3>
+              <h3>FLOOD PRO 220</h3>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                recusandae placeat, corporis ab nobis quos omnis deserunt
-                ducimus accusamus cumque repellendus! Sed velit animi rerum
-                atque facilis unde explicabo adipisci.
-              </p>
-            </div>
-          </article>
-        </a>
-
-        <a href="./product-flood_barriers.html" target="_self">
-          <article class="card">
-            <div class="card-image">
-              <img
-                src="../images/products/flood_glazing.jpg"
-                alt="Flood Glazing"
-              />
-            </div>
-            <div class="card-content">
-              <h3>Flood Glazing</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                recusandae placeat, corporis ab nobis quos omnis deserunt
-                ducimus accusamus cumque repellendus! Sed velit animi rerum
-                atque facilis unde explicabo adipisci.
-              </p>
-            </div>
-          </article>
-        </a>
-
-        <a href="./product-flood_barriers.html" target="_self">
-          <article class="card">
-            <div class="card-image">
-              <img
-                src="../images/products/flood_window.jpg"
-                alt="Flood Window"
-              />
-            </div>
-            <div class="card-content">
-              <h3>Flood Window</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                recusandae placeat, corporis ab nobis quos omnis deserunt
-                ducimus accusamus cumque repellendus! Sed velit animi rerum
-                atque facilis unde explicabo adipisci.
-              </p>
-            </div>
-          </article>
-        </a>
-
-        <a href="./product-flood_barriers.html" target="_self">
-          <article class="card">
-            <div class="card-image">
-              <img
-                src="../images/products/flood_housing2.jpg"
-                alt="Flood Housing"
-              />
-            </div>
-            <div class="card-content">
-              <h3>Flood Housing</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                recusandae placeat, corporis ab nobis quos omnis deserunt
-                ducimus accusamus cumque repellendus! Sed velit animi rerum
-                atque facilis unde explicabo adipisci.
-              </p>
-            </div>
-          </article>
-        </a>
-
-        <a href="./product-flood_barriers.html" target="_self">
-          <article class="card">
-            <div class="card-image">
-              <img src="../images/products/water_pumps.jpg" alt="Water Pumps" />
-            </div>
-            <div class="card-content">
-              <h3>Water Pumps</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat
-                recusandae placeat, corporis ab nobis quos omnis deserunt
-                ducimus accusamus cumque repellendus! Sed velit animi rerum
-                atque facilis unde explicabo adipisci.
+                Based on the Flood PRO 160 with the addition of a special skirt
+                all along the barrier, which is using the power of the flood to
+                stop the flood. Force of the water is pushing to the skirt and
+                the skirt is holding the barrier.
               </p>
             </div>
           </article>
