--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <a href="./pages/products-main.html" target="_self">
             <div class="feat-cont-card">
               <h2 class="feat-heading">FLOODING CAN STRIKE AT ANY MOMENT</h2>
-              <img src="./images/car_road.jpg" alt="Room" />
+              <img src="/images/car_road.jpg" alt="Room" />
             </div>
           </a>
 
