--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="featured-content-aside">
             <a href="./pages/product_beta.html" target="_self">
               <div class="feat-cont-card">
-                <h2 class="feat-heading">LAERGER BALLAST TUBE</h2>
+                <h2 class="feat-heading">LAERGE BALLAST TUBES</h2>
                 <img src="./images/barrier4.JPG" alt="Facility" />
               </div>
             </a>
