--- a/pages/contact.html
+++ b/pages/contact.html
@@ -77,7 +77,7 @@
             <br /><br />
             <h3>Flood Pro</h3>
              <br />
-             <a href="mailto:someone@example.com">h2o@floodpro.co.uk</a> <br />
+             <a href="mailto:h2o@floodpro.co.uk">h2o@floodpro.co.uk</a> <br />
             <!-- 07855866314 -->
           </p>
 
